i did something wrong and finally after 30 min i fix it (it takes too long 🥀)

--- a/src/index.css
+++ b/src/index.css
@@ -64,5 +64,5 @@ button::after{
   background: rgba(255, 255, 255, 0.2);
   border-radius: inherit;
   opacity: 0;
-  transition: opacity 0.3s ease;
 }
+
